--- a/src/IndicateursBundle/Resources/views/OpenClose/index.html.twig
+++ b/src/IndicateursBundle/Resources/views/OpenClose/index.html.twig
@@ -13,37 +13,7 @@
 
 {% block body %}
     <div class="container">
-        {#<div class="row">
-            <div class="col-sm-12">
-                <h1>Tickets Ouvert / Fermé</h1>
-            </div>
-        </div>#}
-        <div class="row">
-            <div class="col-sm-12">
-                <table id="opencloseTable" class="display compact" cellspacing="0" width="100%">
-                    <thead>
-                    <tr>
-                        <th class="select-filter">Mois</th>
-                        <th class="select-filter">Projet</th>
-                        <th class="select-filter">Nature</th>
-                        <th class="select-filter">Priorité</th>
-                        <th class="sum">Ouvert</th>
-                        <th class="sum">Fermé</th>
-                    </tr>
-                    </thead>
-                    <tfoot>
-                    <tr>
-                        <th>Mois</th>
-                        <th>Projet</th>
-                        <th>Nature</th>
-                        <th>Priorité</th>
-                        <th>Ouvert</th>
-                        <th>Fermé</th>
-                    </tr>
-                    </tfoot>
-                </table>
-            </div>
-        </div>
+        {{ table_delai_HTML| raw }}
         <div class="row">
             <div class="col-sm-12">
                 <div id="chartContainer" style="height: 300px; width: 100%;">
@@ -53,41 +23,7 @@
     <script type="text/javascript">
         window.onload = function(){
             $(document).ready(function() {
-                $.fn.dataTable.moment( 'MMMM','fr' );
-                $('#opencloseTable').DataTable( {
-                    "ajax": "openclose/table/2016",
-                    "columns": [
-                        { "data": "Mois" },
-                        { "data": "Projet" },
-                        { "data": "Nature" },
-                        { "data": "Priorite" },
-                        { "data": "Ouverture" },
-                        { "data": "Fermeture" }
-                    ],
-                    "scrollY":        "350px",
-                    "scrollCollapse": true,
-                    "paging":         false,
-                    initComplete: function () {
-                        this.api().columns('.select-filter').every( function () {
-                            var column = this;
-                            var select = $('<select><option value=""></option></select>')
-                                .appendTo( $(column.footer()).empty() )
-                                .on( 'change', function () {
-                                    var val = $.fn.dataTable.util.escapeRegex(
-                                        $(this).val()
-                                    );
-                                    column
-                                        .search( val ? '^'+val+'$' : '', true, false )
-                                        .draw();
-                                    getOpenCloseGraph($(title).html(),$(this).val());
-                                } );
-
-                            column.data().unique().sort().each( function ( d, j ) {
-                                select.append( '<option value="'+d+'">'+d+'</option>' )
-                            } );
-                        } );
-                    }
-                } );
+                {{ table_incidentReouverture_JS| raw }}
                 getOpenCloseGraph();
             } );
         };
