--- a/src/IndicateursBundle/Resources/views/Contractuel/index.html.twig
+++ b/src/IndicateursBundle/Resources/views/Contractuel/index.html.twig
@@ -29,6 +29,8 @@
 
 
     </div>
+{% endblock %}
+{% block indic_javascript %}
     <script type="text/javascript">
         window.onload = function(){
             $(document).ready(function() {
