--- a/src/IndicateursBundle/Resources/views/Table/table_javascript.html.twig
+++ b/src/IndicateursBundle/Resources/views/Table/table_javascript.html.twig
@@ -26,8 +26,8 @@
                 "scrollY":        "350px",
                 "scrollCollapse": true,
                 "paging":         false,
-                dom: 'Bfrtip',
-                buttons: [
+                "dom": 'Bfrtip',
+                "buttons": [
                     'excel', 'pdf', 'print'
                 ],
                 initComplete: function () {
