--- a/src/IndicateursBundle/Resources/views/Contractuel/index.html.twig
+++ b/src/IndicateursBundle/Resources/views/Contractuel/index.html.twig
@@ -12,6 +12,8 @@
                     <li role="presentation"><a data-toggle="tab" href="#menu2">Délai de traitement assistance</a></li>
                 </ul>
             </div>
+        </div>
+        <div class="row" style="margin-top:30px;">
             <div class="tab-content">
                 <div id="incidentReouverture" class="tab-pane fade in active">
                     {{ table_incidentReouverture_HTML| raw }}
