--- a/src/IndicateursBundle/Resources/views/Contractuel/ReouvertureIncidentCount.render.html.twig
+++ b/src/IndicateursBundle/Resources/views/Contractuel/ReouvertureIncidentCount.render.html.twig
@@ -1,10 +1,3 @@
-<div class="col-md-3">
-    <div class="panel panel-default">
-        <div class="panel-heading">Nombre d'anomalies réouvertes</div>
-        <div class="panel-body">
-            <div class="center-block text-center">
-                <h2>{{ count }}</h2>
-            </div>
-        </div>
-    </div>
+<div style="text-align: center;font-size:30px">
+    <span>{{ count }}</span>
 </div>
