--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -31,6 +31,7 @@
         </nav>
         {% block body %}{% endblock %}
         {% javascripts output='js/compiled/main.js'
+        'js/global.js'
         'js/jquery-3.1.0.min.js'
         'js/bootstrap.min.js'%}
         <script type="text/javascript" src="{{ asset_url }}"></script>
