--- a/src/IndicateursBundle/Resources/views/Highcharts/chart.html.twig
+++ b/src/IndicateursBundle/Resources/views/Highcharts/chart.html.twig
@@ -1,6 +1,9 @@
 <div class="row">
     <div class="col-sm-12">
-        <div id="chartContainer" style="height: 300px; width: 100%;">
+        <div id="{{ graph.id }}" style="height: 300px; width: 100%;">
+            <div style="width:100%;height:100%;text-align: center;font-size: 30px;padding-top:30px;opacity: 0.5;">
+                <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+            </div>
         </div>
     </div>
 </div>
