--- a/src/IndicateursBundle/Resources/views/Table/table_javascript.html.twig
+++ b/src/IndicateursBundle/Resources/views/Table/table_javascript.html.twig
@@ -1,61 +1,63 @@
 <script type="text/javascript">
-    window.onload = function(){
-        $(document).ready(function() {
-            $.fn.dataTable.moment( 'MMMM','fr' );
-            $('#{{ table.id }}').DataTable( {
-                "ajax":{
-                    "url": "{{ table.ajax.url }}",
-            {% if(table.ajax.datas is defined) %}
-                    "data": {
-                        {% for data in table.ajax.datas %}
-                        "{{ data.name }}": "{{ data.value }}",
-                        {% endfor %}
-                    },
-            {% endif %}
-                },
-                "columns": [
-                    {% for col in table.cols %}
-                    { "data": "{{ col.data }}" },
+    function getTable{{ table.id }}(){
+        $.fn.dataTable.moment( 'MMMM','fr' );
+        $('#{{ table.id }}').DataTable( {
+            "ajax":{
+                "url": "{{ table.ajax.url }}",
+                {% if(table.ajax.datas is defined) %}
+                "data": {
+                    {% for data in table.ajax.datas %}
+                    "{{ data.name }}": "{{ data.value }}",
                     {% endfor %}
-                ],
-                "columnDefs": [ {
-                    "targets": 0,
-                    "orderable": false,
-                }
-                ],
-                "scrollY":        "350px",
-                "scrollCollapse": true,
-                "paging":         false,
-                "dom": 'Bfrtip',
-                "buttons": [
-                    'excel', 'pdf', 'print'
-                ],
-                initComplete: function () {
-                    this.api().columns('.select-filter').every( function () {
-                        var column = this;
-                        var select = $('<select><option value=""></option></select>')
-                                .appendTo( $(column.footer()).empty() )
-                                .on( 'change', function () {
-                                    var val = $.fn.dataTable.util.escapeRegex(
-                                            $(this).val()
-                                    );
-                                    column
-                                            .search( val ? '^'+val+'$' : '', true, false )
-                                            .draw();
-                                    var title = column.header();
-                                    if (typeof getGraph === "function") {
-                                        getGraph($(title).html(),$(this).val());
-                                    }
-                                } );
-                        column.data().unique().sort().each( function ( d, j ) {
-                            select.append( '<option value="'+d+'">'+d+'</option>' )
-                        } );
+                },
+                {% endif %}
+            },
+            "columns": [
+                {% for col in table.cols %}
+                { "data": "{{ col.data }}"{% if(col.href is defined) %},
+                    "fnCreatedCell": function (nTd, sData, oData, iRow, iCol) {
+                        $(nTd).html("<a href='{{ col.href }}"+oData.{{ col.data }}+"' target='_blank'>"+oData.{{ col.data }}+"</a>");
+                    }
+                    {% endif %} },
+                {% endfor %}
+            ],
+            "columnDefs": [ {
+                "targets": 0,
+                "orderable": false,
+            }
+            ],
+            "scrollY":        "350px",
+            "scrollCollapse": true,
+            "paging":         false,
+            "dom": 'Bfrtip',
+            "buttons": [
+                'excel', 'pdf', 'print'
+            ],
+            initComplete: function () {
+                this.api().columns('.select-filter').every( function () {
+                    var column = this;
+                    var select = $('<select><option value=""></option></select>')
+                            .appendTo( $(column.footer()).empty() )
+                            .on( 'change', function () {
+                                var val = $.fn.dataTable.util.escapeRegex(
+                                        $(this).val()
+                                );
+                                column
+                                        .search( val ? '^'+val+'$' : '', true, false )
+                                        .draw();
+                                var title = column.header();
+                                {% if(graph is defined) %}
+                                if (typeof getGraph{{ graph.id }} === "function") {
+                                    getGraph{{ graph.id }}($(title).html(),$(this).val());
+                                }
+                                {% endif %}
+                            } );
+                    column.data().unique().sort().each( function ( d, j ) {
+                        select.append( '<option value="'+d+'">'+d+'</option>' )
                     } );
-                }
-            } );
-            if (typeof getGraph === "function") {
-                getGraph();
+                } );
             }
         } );
-    };
+    }
+    addLoadEvent(getTable{{ table.id }});
 </script>
