--- a/src/IndicateursBundle/Resources/views/OpenClose/index.html.twig
+++ b/src/IndicateursBundle/Resources/views/OpenClose/index.html.twig
@@ -5,11 +5,7 @@
 {% block indic_content %}
     <div class="container">
         {{ table_HTML| raw }}
-        <div class="row">
-            <div class="col-sm-12">
-                <div id="chartContainer" style="height: 300px; width: 100%;">
-            </div>
-        </div>
+        {{ graph_HTML| raw }}
     </div>
 {% endblock %}
 {% block indic_javascript %}
